# audio-transcriber

./: .env.example  README.md  main.py  pyproject.toml  transcriber.py
prompts/: conference_analysis.txt  transcript_correction.txt
