[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "groq>=0.31.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
